# hero

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile.am  README.md  autoregen.sh  configure.ac  gamecontrollerdb.txt  hero.c  logging.c  logging.h  model.c  model.h  modeldraw.c  modeldraw.h  objloader.c  objloader.h  stb_image.h  texture.c  texture.h
assets/: README.txt
