cmake_minimum_required (VERSION 2.8.0)
project (hero)

SET(CMAKE_COLOR_MAKEFILE OFF)

INCLUDE (FindPkgConfig)
PKG_SEARCH_MODULE (SDL2 REQUIRED sdl2)
INCLUDE_DIRECTORIES (${SDL2_INCLUDE_DIRS})
PKG_SEARCH_MODULE (OPENGL REQUIRED gl)
INCLUDE_DIRECTORIES (${OPENGL_INCLUDE_DIRS})

add_executable (hero hero.c)
TARGET_LINK_LIBRARIES (hero ${SDL2_LIBRARIES} ${OPENGL_LIBRARIES})

